css file layout created and fonts imported

--- a/src/css/Styles/main.css
+++ b/src/css/Styles/main.css
@@ -1,32 +1,30 @@
-@import 'reset.css';
+/* @import 'reset.css'; */
 
 @import 'settings.css';
 
 @import 'typography.css';
 
-@import 'article.css';
+/* @import 'article.css'; */
 
-@import 'buttons-links.css';
+/* @import 'buttons-links.css'; */
 
-@import 'buttons.css';
+/* @import 'buttons.css'; */
 
-@import 'card.css';
+/* @import 'card.css'; */
 
-@import 'footer.css';
+/* @import 'footer.css'; */
 
-@import 'forms.css';
+/* @import 'forms.css'; */
 
 @import 'header.css';
 
-@import 'imagery.css';
+/* @import 'imagery.css'; */
 
-@import 'main-forms.css';
+/* @import 'main-forms.css'; */
 
-@import 'main.css';
+/* @import 'nav.css'; */
 
-@import 'nav.css';
-
-@import 'sidebar.css';
+/* @import 'sidebar.css'; */
 
 @import 'theme.css';
 
