--- a/src/css/Styles/header.css
+++ b/src/css/Styles/header.css
@@ -1,3 +1,9 @@
-.header-main {
-    
+.text-left {
+    text-align: left;
+}
+.text-center {
+    text-align: center;
+}
+.text-right {
+    text-align: right;
 }
